k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-api
spec:
  type: NodePort
  selector:
    app: order-api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
